--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack --watch --config webpack.dev.js",
+    "dev:server": "nodemon ./bin/www",
+    "dev:client": "webpack --watch --config webpack.dev.js",
     "lint": "precise-commits",
     "start": "node ./bin/www",
+    "start-dev": "run-p dev:*",
     "test": "jest"
   },
   "husky": {
@@ -59,6 +61,8 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.0.0-rc.14",
     "jest": "^23.6.0",
+    "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.3",
     "precise-commits": "^1.0.2",
     "prettier": "^1.14.2",
     "supertest": "^3.1.0"
