Update dependencies to match packages used in Dashboard LTI.
Install a bunch of dependencies.
Update test npm script to force test environment.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "precise-commits",
     "start": "node ./bin/www",
     "start-dev": "run-p dev:*",
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "husky": {
     "hooks": {
@@ -22,11 +22,14 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@instructure/ui-elements": "^5.28.1",
+    "@instructure/ui-icons": "^5.33.0",
+    "@instructure/ui-layout": "^5.33.0",
     "@instructure/ui-presets": "^5.28.1",
     "@instructure/ui-themes": "^5.28.1",
     "@sentry/node": "^4.0.6",
     "babel-loader": "^8.0.2",
-    "canvas-lms-api": "^0.2.1",
+    "babel-preset-mobx": "^2.0.0",
+    "buzzapi": "^1.2.4",
     "clean-webpack-plugin": "^0.1.19",
     "cookie-parser": "~1.4.3",
     "debug": "~4.0.1",
@@ -39,14 +42,20 @@
     "ims-lti": "^3.0.2",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
+    "parse-link-header": "^1.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-lti": "^0.0.7",
+    "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-router-dom": "^4.3.1",
+    "superagent": "^4.0.0-beta.5",
+    "superagent-promise": "^1.1.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
