--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "qs": "^6.5.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-ga": "^2.5.3",
     "superagent": "^4.0.0-beta.5",
     "superagent-promise": "^1.1.0",
     "webpack": "^4.17.2",
