--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@sentry/node": "^4.0.6",
     "babel-loader": "^8.0.2",
     "babel-preset-mobx": "^2.0.0",
+    "bunyan": "^1.8.12",
+    "bunyan-rotating-file-stream": "^1.6.3",
     "buzzapi": "^1.2.4",
     "clean-webpack-plugin": "^1.0.0",
     "cookie-parser": "~1.4.3",
@@ -44,7 +46,6 @@
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
-    "morgan": "~1.9.0",
     "parse-link-header": "^1.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -59,8 +60,7 @@
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
-    "whatwg-fetch": "^3.0.0",
-    "winston": "^3.1.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
