--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@instructure/ui-elements": "^5.28.1",
-    "@instructure/ui-layout": "^5.33.0",
-    "@instructure/ui-presets": "^5.28.1",
-    "@instructure/ui-themes": "^5.28.1",
-    "@sentry/node": "^4.0.6",
+    "@instructure/ui-elements": "^5.34.0",
+    "@instructure/ui-layout": "^5.34.0",
+    "@instructure/ui-presets": "^5.34.0",
+    "@instructure/ui-themes": "^5.34.0",
+    "@sentry/node": "^4.3.4",
     "babel-loader": "^8.0.2",
     "babel-preset-mobx": "^2.0.0",
     "bunyan": "^1.8.12",
@@ -44,20 +44,20 @@
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
     "mobx": "^5.6.0",
-    "mobx-react": "^5.3.6",
+    "mobx-react": "^5.4.2",
     "moment": "^2.22.2",
     "parse-link-header": "^1.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-lti": "^0.0.7",
     "prop-types": "^15.6.2",
-    "qs": "^6.5.2",
+    "qs": "^6.6.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-ga": "^2.5.3",
+    "react-ga": "^2.5.5",
     "superagent": "^4.0.0",
     "superagent-promise": "^1.1.0",
-    "webpack": "^4.17.2",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
     "whatwg-fetch": "^3.0.0"
@@ -68,10 +68,10 @@
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.0.0-rc.14",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.4",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "precise-commits": "^1.0.2",
     "prettier": "^1.14.2",
     "supertest": "^3.1.0"
