--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "superagent-promise": "^1.1.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4",
-    "whatwg-fetch": "^3.0.0"
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
