refactor: Create 'server' directory.
Move server-related code into its folder.
Update references.
Update npm scripts and test coverage config.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "dev:server": "nodemon ./bin/www | bunyan -L -o short",
+    "dev:server": "nodemon ./server/bin/www | bunyan -L -o short",
     "dev:client": "webpack --watch --config webpack.dev.js",
     "lint": "precise-commits",
-    "start": "node ./bin/www",
+    "start": "node ./server/bin/www",
     "start-dev": "NODE_ENV=development run-p dev:*",
     "test": "NODE_ENV=test jest"
   },
@@ -18,9 +18,7 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "lib/**/*.js",
-      "routes/**/*.js",
-      "server.js"
+      "server/**/*.js"
     ]
   },
   "dependencies": {
