--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.14.1",
     "eslint-config-google": "^0.12.0",
     "eslint-config-prettier": "^4.0.0",
