--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-ga": "^2.5.5",
+    "semver": "^5.6.0",
     "superagent": "^4.0.0",
     "superagent-promise": "^1.1.0",
     "webpack": "^4.29.5",
