--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,27 +4,32 @@ env:
   variables:
     AWS_ACCOUNT_ID: "332672892491"
     IMAGE_NAME: "alti"
-    IMAGE_REPO_USERNAME: "eduapps"
-    IMAGE_TAG: "latest"
+    IMAGE_NAMESPACE: "eduapps"
+    IMAGE_TAG_PROD: "prod"
+    IMAGE_TAG_TEST: "test"
 
 phases:
   pre_build:
     commands:
-      - GIT_DESCRIBE=$(git describe --always)
+      - GIT_COMMIT_HASH=$(git rev-parse --short=7 --verify HEAD)
+      - PACKAGE_VERSION=$(awk -F\" '/"version":/ {print $4}' package.json)
+      - APP_VERSION=$PACKAGE_VERSION-$GIT_COMMIT_HASH
+      - REPO_URL=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_NAMESPACE/$IMAGE_NAME
+
       - echo Logging in to ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
       - echo Build started on `date`
       - echo Building Docker image...
-      - docker build -t $IMAGE_NAME:$IMAGE_TAG .
-      - docker tag $IMAGE_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_USERNAME/$IMAGE_NAME:$IMAGE_TAG
-      - docker tag $IMAGE_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_USERNAME/$IMAGE_NAME:$GIT_DESCRIBE
+      - docker build --build-arg app_version=$APP_VERSION --cache-from=$REPO_URL:$IMAGE_TAG_TEST -t $IMAGE_NAME:$GIT_COMMIT_HASH -t $IMAGE_NAME:$IMAGE_TAG_TEST .
+      - docker tag $IMAGE_NAME:$IMAGE_TAG_TEST $REPO_URL:$IMAGE_TAG_TEST
+      - docker tag $IMAGE_NAME:$IMAGE_TAG_TEST $REPO_URL:$GIT_COMMIT_HASH
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing Docker image and tags...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_USERNAME/$IMAGE_NAME:$GIT_DESCRIBE
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_USERNAME/$IMAGE_NAME:$IMAGE_TAG
-      - aws ecs update-service --cluster eduapps-test --service alti-test --force-new-deployment
+      - docker push $REPO_URL:$IMAGE_TAG_TEST
+      - docker push $REPO_URL:$GIT_COMMIT_HASH
+      - aws ecs update-service --cluster eduapp-test --service alti-test --force-new-deployment
       - echo Done
