--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,9 @@ phases:
 
       - echo Logging in to ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+
+      - docker version
+      - docker pull $REPO_URL:$IMAGE_TAG_TEST || true
   build:
     commands:
       - echo Build started on `date`
