--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "dev:server": "nodemon ./server/bin/www | bunyan -L -o short",
     "dev:client": "webpack --watch --config webpack.dev.js",
     "lint": "precise-commits",
     "start": "node ./server/bin/www",
     "start-dev": "NODE_ENV=development run-p dev:*",
+    "start-test": "start-server-and-test start http://localhost:3000 cy:run",
     "test": "NODE_ENV=test jest"
   },
   "husky": {
@@ -65,17 +68,21 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "cypress": "^3.3.1",
     "eslint": "^5.14.1",
     "eslint-config-google": "^0.12.0",
     "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-cypress": "^2.2.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.2.0",
     "jest": "^24.5.0",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.5",
+    "oauth-signature": "^1.5.0",
     "precise-commits": "^1.0.2",
     "prettier": "^1.14.2",
+    "start-server-and-test": "^1.9.1",
     "supertest": "^3.1.0"
   }
 }
