Add NO_COLOR env variable to e2e test container.
Set NO_COLOR=1 to disable color output for CI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - app
     environment:
       - CI=1
+      - NO_COLOR
       - APP_URL=${CI_APP_URL}
       - CYPRESS_baseUrl=${CI_CYPRESS_baseUrl}
       - LTI_KEY
