Add flags to yarn install.

--- a/e2e/Dockerfile
+++ b/e2e/Dockerfile
@@ -6,5 +6,6 @@ ENV CI=1
 COPY package.json .
 COPY yarn.lock .
 
-RUN yarn install
+RUN yarn install --production --no-progress --non-interactive
+
 RUN npx cypress verify
