--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-loader": "^8.0.2",
     "bunyan": "^1.8.12",
     "buzzapi": "^1.2.4",
+    "caccl-api": "^1.0.27",
     "clean-webpack-plugin": "^1.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.0",
