--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,38 +12,32 @@ env:
 
 phases:
   install:
+    runtime-versions:
+      docker: 18
+  pre_build:
     commands:
       # Short commit hash
       - GIT_COMMIT_HASH=$(git rev-parse --short=7 --verify HEAD)
 
-      - PACKAGE_VERSION=$(awk -F\" '/"version":/ {print $4}' package.json)
+      # Container repository location
+      - REPO_URL=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAMESPACE/$IMAGE_NAME
 
-      - APP_VERSION=$PACKAGE_VERSION-$GIT_COMMIT_HASH
-
-      # Container repository location.
-      - REPO_URL=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_NAMESPACE/$IMAGE_NAME
-
-      # Use the IMAGE_TAG passed in from the build, fallback to 'latest' if blank.
+      # Use IMAGE_TAG passed in from the build, fallback to 'latest' if blank.
       - TAG=${IMAGE_TAG:-latest}
-  pre_build:
-    commands:
+
       # Log in to ECR
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
 
-      # Pull each image layer for the build to cache from.
-      - docker pull $REPO_URL:build-stage || true
+      # Pull this image for the build to cache from.
       - docker pull $REPO_URL:$TAG || true
   build:
     commands:
-      - docker build --cache-from $REPO_URL:build-stage --target build-stage -t $IMAGE_NAME:build-stage .
-      - docker tag $IMAGE_NAME:build-stage $REPO_URL:build-stage
-
-      - docker build --build-arg app_version=$APP_VERSION --cache-from $REPO_URL:build-stage --cache-from $REPO_URL:$TAG -t $IMAGE_NAME:$GIT_COMMIT_HASH -t $IMAGE_NAME:$TAG .
+      - echo Cache from $REPO_URL:$TAG
+      - docker build --build-arg app_version=$GIT_COMMIT_HASH --cache-from $REPO_URL:$TAG -t $IMAGE_NAME:$GIT_COMMIT_HASH -t $IMAGE_NAME:$TAG .
       - docker tag $IMAGE_NAME:$TAG $REPO_URL:$TAG
       - docker tag $IMAGE_NAME:$TAG $REPO_URL:$GIT_COMMIT_HASH
   post_build:
     commands:
-      - docker push $REPO_URL:build-stage
       - docker push $REPO_URL:$TAG
       - docker push $REPO_URL:$GIT_COMMIT_HASH
 
