--- a/package.json
+++ b/package.json
@@ -10,19 +10,13 @@
     "dev:client": "webpack --watch --config webpack.dev.js",
     "lint": "precise-commits",
     "start": "node ./server/bin/www",
-    "start-dev": "NODE_ENV=development run-p dev:*",
-    "start-test": "start-server-and-test start http://localhost:3000 cy:run",
-    "test": "NODE_ENV=test jest"
+    "start-dev": "run-p dev:*",
+    "start-test": "start-server-and-test start http://localhost:3000 cy:run"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "run-s lint test"
+      "pre-commit": "run-s lint"
     }
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "server/**/*.js"
-    ]
   },
   "dependencies": {
     "@babel/cli": "^7.0.0",
@@ -52,7 +46,6 @@
     "jwt-decode": "^2.2.0",
     "parse-link-header": "^1.0.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "passport-lti": "^0.0.7",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
@@ -68,7 +61,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "cypress": "^3.3.1",
     "eslint": "^5.14.1",
     "eslint-config-google": "^0.12.0",
     "eslint-config-prettier": "^4.0.0",
@@ -76,13 +68,11 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.2.0",
-    "jest": "^24.5.0",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.5",
     "oauth-signature": "^1.5.0",
     "precise-commits": "^1.0.2",
     "prettier": "^1.14.2",
-    "start-server-and-test": "^1.9.1",
-    "supertest": "^3.1.0"
+    "start-server-and-test": "^1.9.1"
   }
 }
