--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@instructure/ui-elements": "^5.34.0",
-    "@instructure/ui-layout": "^5.34.0",
-    "@instructure/ui-presets": "^5.34.0",
-    "@instructure/ui-themes": "^5.34.0",
+    "@instructure/canvas-theme": "^6.9.0",
+    "@instructure/ui-elements": "^6.9.0",
+    "@instructure/ui-layout": "^6.9.0",
+    "@instructure/ui-webpack-config": "^6.9.0",
     "@sentry/node": "^4.3.4",
     "babel-loader": "^8.0.2",
     "bunyan": "^1.8.12",
