Upgrade dependencies and fix various issues.
Update eslint config.
Ignore babel caches.
Add .prettierignore.
Extend docker-compose and makefile for staging runs.
Update Dockerfile, node version 10 -> LTS.
Edit npm scripts.
Move babel config into package.json.
Create lint-staged config.
Create nodemon config in package.json.
Upgrade dependencies to latest.
Remove @babel/cli.
Use @instructure/ui monorepo for UI components.
Swap canvas-lms-api back in.
Remove superagent-promise.
Use lint-staged instead of precise-commits.
Remove unused dev dependencies.
Update webpack configs: set context folder, move babel config out, use
inst-ui presets, fixes for updated plugins.
Add html dir attribute and specify webfont in index.html.
Remove display border effect.
Edit app version display.
Specify algorithm for JWT, now required.
Lintfixes.

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,23 +1,24 @@
 version: "3.8"
 services:
   app:
-    command: yarn run start-dev
+    build:
+      args:
+        - app_version=staging
+      context: .
+    command: yarn run start
     container_name: alti
     environment:
-      - APP_VERSION=develop
+      - APP_VERSION=staging
       - CANVAS_API_URL
       - CANVAS_TOKEN
       - LTI_KEY
       - LTI_SECRET
-      - NODE_ENV=development
+      - NODE_ENV=production
       - TRUST_PROXY
-      - VIRTUAL_HOST
-    image: node:lts
+      - VIRTUAL_HOST=dev.127.0.0.1.xip.io
+    image: alti-app:staging
     ports:
       - "3000"
-    volumes:
-      - nm:/app/node_modules
-      - .:/app
     working_dir: /app/
   reverse-proxy:
     container_name: nginx
@@ -28,7 +29,3 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - $HOME/certs:/etc/nginx/certs
-
-volumes:
-  nm:
-    external: true
