--- a/package.json
+++ b/package.json
@@ -35,19 +35,14 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
     "@instructure/canvas-theme": "^7.1.1",
     "@instructure/ui": "^7.1.1",
     "@instructure/ui-babel-preset": "^7.1.1",
     "@instructure/ui-webpack-config": "^7.1.1",
     "@sentry/node": "^5.18.0",
-    "babel-loader": "^8.1.0",
     "bunyan": "^1.8.13",
     "buzzapi": "^1.3.10",
     "canvas-lms-api": "^0.2.3",
-    "clean-webpack-plugin": "^3.0.0",
     "cookie-parser": "~1.4.5",
     "debug": "~4.1.0",
     "dotenv": "^8.2.0",
@@ -67,14 +62,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "semver": "^7.3.2",
-    "superagent": "^5.2.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.0.9"
+    "superagent": "^5.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
@@ -85,6 +81,10 @@
     "lint-staged": ">=10",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "semver": "^7.3.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.0.9"
   }
 }
