--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "babel": {
     "presets": [
       "@babel/env",
-      "@babel/preset-react",
-      "@instructure/ui-babel-preset"
+      "@babel/preset-react"
     ]
   },
   "husky": {
@@ -36,56 +35,58 @@
     ]
   },
   "dependencies": {
-    "@instructure/canvas-theme": "^7.1.1",
-    "@instructure/ui": "^7.1.1",
-    "@instructure/ui-babel-preset": "^7.1.1",
-    "@instructure/ui-webpack-config": "^7.1.1",
-    "@sentry/node": "^5.18.0",
-    "bunyan": "^1.8.13",
-    "buzzapi": "^1.3.10",
-    "canvas-lms-api": "^0.2.3",
+    "@emotion/core": "^10.0.27",
+    "@instructure/canvas-theme": "^8.7.0",
+    "@instructure/ui": "^8.7.0",
+    "@instructure/ui-babel-preset": "^8.7.0",
+    "@instructure/ui-webpack-config": "^8.7.0",
+    "@sentry/node": "^6.10.0",
+    "bunyan": "^1.8.15",
+    "buzzapi": "^1.3.13",
+    "canvas-lms-api": "^0.2.5",
     "cookie-parser": "~1.4.5",
-    "debug": "~4.1.0",
-    "dotenv": "^8.2.0",
-    "ejs": "~3.1.3",
+    "debug": "~4.3.2",
+    "dotenv": "^10.0.0",
+    "ejs": "~3.1.6",
     "express": "~4.17.1",
     "express-jwt": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.2",
     "http-errors": "~1.8.0",
     "ims-lti": "^3.0.2",
-    "jsonwebtoken": "^8.3.0",
-    "jwt-decode": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "parse-link-header": "^1.0.1",
     "passport": "^0.4.1",
     "passport-lti": "^0.0.7",
-    "prop-types": "^15.6.2",
-    "qs": "^6.9.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
-    "superagent": "^5.2.2"
+    "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-ga": "^3.3.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
+    "@babel/preset-react": "^7.14.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^7.5.0",
+    "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "husky": ">=4",
-    "lint-staged": ">=10",
-    "nodemon": "^2.0.4",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": ">=7",
+    "lint-staged": ">=11",
+    "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5",
-    "semver": "^7.3.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.0.9"
+    "prettier": "2.3.2",
+    "semver": "^7.3.5",
+    "sinon": "9.2.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0"
   }
 }
